<resources>
    <string name="app_name">Žum&#x3c0;čka</string>
    <string name="action_settings">Settings</string>
    <string name="saved_into_clipboard">Saved into clipboard</string>
    <string name="unable_to_finish_operation">Unable to finish operation</string>

    <string name="dummy_short">Lorem Ipsum</string>
    <string name="dummy">Lorem Ipsum is simply dummy text</string>
    <string name="dummy_mid">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s…</string>
    <string name="dummy_long">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>
    <string name="credentials">Credentials</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="user">Username</string>
    <string name="password">Password</string>
    <string name="load_images">Load Images</string>
    <string name="settings">Settings</string>
    <string name="permissions">Permissions</string>
    <string name="crashlytics">Crashlytics</string>
    <string name="wheeeee">Wheeeeeeee!</string>
    <string name="ok">OK</string>
    <string name="done">Done</string>


    <string name="err_no_username">No Username!</string>
    <string name="err_no_password">No Password!</string>
    <string name="err_fail">Fail :(</string>
    <string name="err_empty_subject">Empty subject</string>
    <string name="err_empty_msg">Empty message</string>
    <string name="err_login_first">Login first!</string>
    <string name="err_no_push_reg">Unable to register for push notifications!</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>

    <string name="none">None</string>
    <string name="favorites">Favorites</string>
    <string name="own">Own</string>
    <string name="filter">Filter</string>
    <string name="nick_name">Nickname</string>
    <string name="show_last_author">Show last author</string>
    <string name="original">Original</string>
    <string name="resized">Resized</string>
    <string name="resolution">Resolution</string>
    <string name="size">Size</string>
    <string name="notification_header">Žum&#x3c0;čoviny…</string>
    <string name="offline">Offline</string>
    <string name="online">Online</string>
    <string name="download_images">Download Images</string>
    <string name="threads">Threads</string>
    <string name="images">Images</string>
    <string name="action_start">Start</string>
    <string name="action_stop">Stop</string>
    <string name="pages">Pages</string>
    <string name="transition_image">transition_image</string>
    <string name="share">Share</string>
    <string name="notifications">Notifications</string>
    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>
</resources>
