<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_height="wrap_content"
              android:layout_width="wrap_content"
              android:keepScreenOn="true"
              android:background="?buttonBackground"
              android:padding="@dimen/gap_normal"
              android:divider="@drawable/divider_horizontal_transparent_small"
              android:minWidth="@dimen/dialog_offline_min_width"
              android:layout_gravity="center"
              android:showDividers="middle"
              android:orientation="vertical"
              tools:context=".app.MainActivity">

    <CheckBox
        android:id="@+id/images_download"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/download_images"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pages"/>

    <EditText
        android:id="@+id/pages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:inputType="number"
        android:maxLength="1"
        android:minWidth="50dp"
        android:text="1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/threads" />

        <TextView
            android:id="@+id/threads"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="..."
            tools:ignore="HardcodedText"/>
    </LinearLayout>

    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/images"/>

        <TextView
            android:id="@+id/images"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="0/0"/>

    </LinearLayout>

    <ProgressBar
        android:id="@id/progress_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="invisible"
        tools:visibility="visible"
        style="@style/HorizontalProgressBar"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:showDividers="middle"
        android:divider="@drawable/divider_vertical_transparent_normal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/start"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?buttonBackground"
            android:padding="?listItemPadding"
            android:textColor="?attr/buttonTextColor"
            android:textSize="?attr/buttonTextSize"
            android:text="@string/action_start"/>

        <Button
            android:id="@+id/stop"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?buttonBackground"
            android:padding="?listItemPadding"
            android:textColor="?attr/buttonTextColor"
            android:textSize="?attr/buttonTextSize"
            android:text="@string/action_stop"/>
    </LinearLayout>
</LinearLayout>